--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 </div>
 
                 <section id="game">
-                    <button class="box">X</button>
-                    <button class="box">0</button>
+                    <button class="box"></button>
+                    <button class="box"></button>
                     <button class="box"></button>
                     <button class="box"></button>
                     <button class="box"></button>
@@ -34,7 +34,7 @@
                     <button class="box"></button>
                     <button class="box"></button>
                 </section>
-                <div class="resetbutton">
+                <div id="resetbutton">
                     <button>Reset Game</button>
                 </div>
             </div>
@@ -49,7 +49,7 @@
     </footer>
 
     <script src="./script.js">
-        
+
     </script>
 </body>
 
