--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="gamearea">
                 <div class="player d-flex">
-                    <button>PLayer 1</button>
+                    <button id="">PLayer 1</button>
                     <button>Player 2</button>
                 </div>
 
